--- a/simple-todos-angular.html
+++ b/simple-todos-angular.html
@@ -1,11 +1,10 @@
 <head>
-  <title>simple-todos-angular</title>
+  <title>Todo List</title>
 </head>
 
-<body>
-  <h1>Welcome to Meteor!</h1>
-
-  {{> hello}}
+<body ng-app="simple-todos">
+  ng-include="todos-list.ng.html"
+  ng-controller="TodosListCtrl">
 </body>
 
 <template name="hello">
