--- a/simple-todos-angular.html
+++ b/simple-todos-angular.html
@@ -2,9 +2,7 @@
   <title>Todo List</title>
 </head>
 
-<body ng-app="simple-todos">
-  ng-include="todos-list.ng.html"
-  ng-controller="TodosListCtrl">
+<body ng-app="simple-todos" ng-include="todos-list.ng.html" ng-controller="TodosListCtrl">
 </body>
 
 <template name="hello">
